# zp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ztech/zp/: crc.hpp  endian.hpp  flags.hpp  message.hpp  message_header.hpp  message_writer.hpp  messgae_reader.hpp
include/ztech/zp/compress/: compression_algorithm.hpp  lz4.hpp  zstd.hpp
include/ztech/zp/detail/: encoding.hpp
include/ztech/zp/util/: message_builder.hpp  serialization.hpp
lib/: CMakeLists.txt
src/: compress_lz4.cpp  compress_zstd.cpp  message.cpp  message_builder.cpp  message_header.cpp
tests/: CMakeLists.txt
tests/include/ztech/zp/tests/util/: random.hpp
tests/src/: compression_tests.cpp  compression_zstd_tests.cpp  crc_tests.cpp  dummy_tests.cpp  encoding_tests.cpp  message_builder_tests.cpp  message_header_tests.cpp  message_tests.cpp  serialization_tests.cpp  testing_util_random_tests.cpp
